# personal-finance

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  DockerfileWeb  README.md  captain-definition  captain-definition-web  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
apps/accounts/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_auto_20190924_1145.py  0003_auto_20191022_1322.py  0004_auto_20191023_1258.py  0005_auto_20191101_0941.py  0006_auto_20191125_1108.py  (+2 more)
apps/budgets/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
apps/categories/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/payees/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
apps/registration/: __init__.py  apps.py  emails.py  serializers.py  signals.py  urls.py  views.py
apps/settings/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/tags/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
apps/taxdata/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  wizard.py
apps/transaction_wizard/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
apps/transactions/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  views.py
config/: nginx.conf  run-dev.sh  run.sh  uwsgi.ini
docker/: api.dockerfile  db.dockerfile  web.dockerfile
fixtures/: categories.json  taxdata.json
shinywaffle/: authentication.py  middleware.py  pagination.py  settings.py  urls.py  wsgi.py
util/: serializers.py  views.py
web/: Dockerfile  i18next-parser.config.js  package-lock.json  package.json  tsconfig.json
web/public/: browserconfig.xml  index.html  manifest.json
web/src/: App.scss  App.tsx  i18n.ts  index.tsx
(+234 files in other folders)
