[tool.poetry]
name = "shinywaffle"
version = "0.1.0"
description = ""
authors = ["Julian Wachholz <julian@wachholz.ch>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
psycopg2-binary = "^2.8"
argon2-cffi = "^19.2"
django-environ = "^0.4.5"
django-money = "^1.0"
django-mptt = "^0.10.0"
django-colorfield = "^0.1.15"
django-countries = "^5.5"
djangorestframework = "^3.10"
python-dateutil = "^2.8"
data-wizard = "^1.2"
django-filter = "^2.2"

[tool.poetry.scripts]

[tool.poetry.dev-dependencies]
pytest = "^3.4"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
django-debug-toolbar = "^2.1"

[tool.black]
exclude ='''
(
  migrations
  node_modules
)
'''

[build-system]
requires = ["poetry==0.12.17"]
build-backend = "poetry.masonry.api"
